# template-rust

./: .dockerignore  .env.example  .gitignore  API.rest  Cargo.toml  Makefile  README.md  compose.build.yml  compose.yml
.devcontainer/: devcontainer.json
docs/: README.environment-building.md  README.make.md  README.scoop-package.md  README.scoop.md
infrastructure/rust/: Dockerfile
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/use_cases/: mod.rs
src/domain/: mod.rs
src/domain/entities/: mod.rs
src/infrastructure/: mod.rs
src/infrastructure/db/: mod.rs
src/infrastructure/devices/: mod.rs
src/infrastructure/external_interfaces/: mod.rs
src/infrastructure/web/: mod.rs  routes.rs
src/interface/: mod.rs
src/interface/controllers/: mod.rs  sample.rs
src/interface/gateways/: mod.rs
src/interface/presenters/: mod.rs
